# AzxEngineGL

./: CMakeLists.txt  README.md
src/: Assimp2Glm.cpp  Assimp2Glm.h  Bone.cpp  Bone.h  BoneInfo.h  Camera.cpp  Framebuffer.cpp  Framebuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  SkinnedAnimation.cpp  SkinnedAnimation.h  SkinnedAnimator.cpp  SkinnedAnimator.h  TimeManager.cpp  TimeManager.h  Utils.h  Window.cpp  Window.h
src/ECS/: ComponentArray.cpp  ComponentArray.h  IComponentArray.h  ISystem.h  Registry.cpp  Registry.h  SystemManager.cpp  SystemManager.h  Types.h
src/ECS/Components/: AudioSource.h  Collider.cpp  Collider.h  MeshRenderer.h  PlayerController.h  Skeleton.h  SkinnedMeshRenderer.h  Transform.h
src/ECS/Systems/: CollisionSystem.cpp  CollisionSystem.h  PlayerControlSystem.cpp  PlayerControlSystem.h  RenderSystem.cpp  RenderSystem.h
src/Gizmos/: GizmoBase.h
src/Lights/: DirectionalLight.h  PointLight.h
src/Primitives/: AbstractPrimitive.cpp  AbstractPrimitive.h  Cube.cpp  Cube.h  Plane.cpp  Plane.h
src/Resources/: Material.h  ResourceManager.cpp  ResourceManager.h
src/World/: Entity.cpp  Entity.h
